--- a/CSGYoungAdultGroup/Views/Web.config
+++ b/CSGYoungAdultGroup/Views/Web.config
@@ -18,10 +18,13 @@
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
         <add namespace="CSGYoungAdultGroup" />
+        <add namespace="System.Data.SqlClient"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
-
+  <connectionStrings>
+    <add name="YoungAdultContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=CSGYoungAdultGroup1;Integrated Security=SSPI;" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Enabled" value="false" />
   </appSettings>
